--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.4.0",
     "gulp-useref": "^3.1.0",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
